[gd_scene load_steps=6 format=2]

[ext_resource path="res://Recursos/Enemies/cloud.png" type="Texture" id=1]
[ext_resource path="res://Juego/Personaje/Nubon.gd" type="Script" id=2]
[ext_resource path="res://Juego/Objetos/Rayo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Recursos/SFX/Nub√≥n rayo.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Moverse"
length = 4.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 0.554787, 0.840896, 0.870551 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 600, 0 ), Vector2( 0, 0 ) ]
}

[node name="Nubon" type="Node2D"]
script = ExtResource( 2 )
rayo = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 351.694, 0 )
z_index = 50
z_as_relative = false
texture = ExtResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="Sprite"]
enabled = true
cast_to = Vector2( 0, 800 )
collision_mask = 2

[node name="PosicionesDisparo" type="Node2D" parent="Sprite"]

[node name="PosicionDerecha" type="Position2D" parent="Sprite/PosicionesDisparo"]
modulate = Color( 0.627451, 0.0431373, 0.0431373, 1 )
position = Vector2( -42.8221, 39.3639 )
__meta__ = {
"_gizmo_extents_": 0.0
}

[node name="PosicionIzquierda" type="Position2D" parent="Sprite/PosicionesDisparo"]
modulate = Color( 0.627451, 0.0431373, 0.0431373, 1 )
position = Vector2( 23.3974, 39.05 )
__meta__ = {
"_gizmo_extents_": 0.0
}

[node name="PosicionCentro" type="Position2D" parent="Sprite/PosicionesDisparo"]
modulate = Color( 0.627451, 0.0431373, 0.0431373, 1 )
position = Vector2( -8.72446, 39.25 )
__meta__ = {
"_gizmo_extents_": 0.0
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Moverse"
anims/Moverse = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="RayoSonido" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.992
bus = "SFX"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
